--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -18,8 +18,4 @@ checksum:
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
+  skip: true
