--- a/examples/example_golden_files/complex_resource/apply.json
+++ b/examples/example_golden_files/complex_resource/apply.json
@@ -2,7 +2,6 @@
   {
     "@level": "info",
     "@message": "tfcoremock_complex_resource.complex_resource: Plan to create",
-    "@module": "terraform.ui",
     "change": {
       "action": "create",
       "resource": {
@@ -20,7 +19,6 @@
   {
     "@level": "info",
     "@message": "tfcoremock_complex_resource.complex_resource: Creating...",
-    "@module": "terraform.ui",
     "hook": {
       "action": "create",
       "resource": {
@@ -38,7 +36,6 @@
   {
     "@level": "info",
     "@message": "tfcoremock_complex_resource.complex_resource: Creation complete after 0s [id=d199d8ea-e8f8-4fb0-8276-3567a74d3db8]",
-    "@module": "terraform.ui",
     "hook": {
       "action": "create",
       "elapsed_seconds": 0,
@@ -59,10 +56,10 @@
   {
     "@level": "info",
     "@message": "Apply complete! Resources: 1 added, 0 changed, 0 destroyed.",
-    "@module": "terraform.ui",
     "changes": {
       "add": 1,
       "change": 0,
+      "import": 0,
       "operation": "apply",
       "remove": 0
     },
@@ -71,7 +68,6 @@
   {
     "@level": "info",
     "@message": "Outputs: 0",
-    "@module": "terraform.ui",
     "outputs": {},
     "type": "outputs"
   }
