--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
   pull_request_target:
     types: [opened, synchronize]
+  pull_request:
+    types: [opened, synchronize]
 
 permissions:
   contents: read
